--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(29, 12, 12, 0.87);
-  background-color: #f5f5dc;
+  background-color: #dadcd3;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
